--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,21 @@ img,
 object {
   max-width: 100%;
 }
+header{ 
+    color: silver;
+    font-size: 50px;
+    text-align: center;
+}
+body{
+    background-color: maroon;
+    
+    
+}
+img{ 
+    width: 400px;
+    height: auto;
+    
+}
 
 /* type hierarchy- change for your project */
 h1 {
