--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ html {
   color: #333;
   font-size: 1em;
   line-height: 1.4;
+    border: solid;
 }
 
 /* make images and embedded media fluid */
@@ -23,25 +24,186 @@ object {
   max-width: 100%;
 }
 header{ 
-    color: silver;
-    font-size: 50px;
+    font-family: 'Gloria Hallelujah', cursive;
+    color: #B6B6B6;
+    font-size: 55px;
     text-align: center;
 }
 body{
-    background-color: maroon;
+    background-color: #660000;
     
-    
-}
-img{ 
-    width: 400px;
-    height: auto;
     
 }
 
-/* type hierarchy- change for your project */
 h1 {
-  font-size: 3em; /* 48px */
+  display: block;
+    font-size: 2.7em;
+    font-family: 'Pacifico', cursive;
+    color: #FAFAFA;
+    text-align: justify;
+    
+
 }
+
+
+.para{ 
+    font-size: 15px;
+    color: white;
+    margin: 15px;
+    font-family: 'Gloria Hallelujah', cursive;
+    
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+li {
+    float: left;
+    margin: 9px;
+    width: 12%;
+}
+.index li a{
+        
+float: left;
+	display: block;
+	padding: 3px 10px;
+	background: grey url(bg-topnav.jpg) no-repeat 100% 0;
+	margin: 0 1px 0 0;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+}
+.index li a:hover{
+    
+    color: black;
+    
+}
+.index li.page-1 a
+{
+	background: grey url(bg-topnav-left.jpg) no-repeat;
+    
+}      
+    
+}
+a:hover { 
+    background-color: white;
+}
+
+
+img{ 
+    width:500px;
+    height: auto;
+    border-radius: 25px;
+    border: 4px solid black
+   
+    
+}
+.image{
+	float:left;
+	margin-top:25px;
+	padding:10px;
+	width:50%;
+    height: 40%;
+}
+
+.image2{
+    float: right;
+    margin-top: 25px;
+    width:50%;
+    height: 40%;
+        
+}
+.image3{
+    width: 10%;
+    float: left;
+    height: 40%;
+    margin-top: 25px;
+    padding: 10px;
+    
+}
+.image4{
+    width: 10%;
+    float: right;
+    margin-top: 25px;
+    padding: 10px;
+    height: 40%;
+    
+}
+.image5{
+    width: 30%;
+    float: right;
+     text-align: justify;
+    color: yellow ;
+    font-family:'Montserrat', sans-serif;
+    font-size: 11px;
+    
+    
+}
+.image6{
+    width: 30%;
+    float: right;
+    border-radius: 25px;
+    text-align: justify;
+    color: white ;
+    font-family:'Montserrat', sans-serif;
+    font-size: 11px;
+    
+    
+}
+.image8{
+    text-align: justify;
+    color: yellow ;
+    font-family:'Montserrat', sans-serif;
+    font-size: 11px;
+    
+}
+
+.text2{
+    float:bottom;
+	margin-top:25px;
+	padding:12px;
+	margin-bottom:5px;
+	width:25%;
+	font-weight:bold;
+	font-size:20px;
+}
+
+    
+.text{
+	float:bottom;
+	margin-top:25px;
+	padding:12px;
+	margin-bottom:50px;
+	width:35%;
+	font-weight:bold;
+	font-size:20px;
+}
+.text:hover{
+    background-color: silver;
+    color: black;
+    
+}
+.text2:hover{
+    background-color: silver;
+}
+
+.img-with-text {
+    text-align: justify;
+    color: white ;
+    font-family:'Montserrat', sans-serif;
+    font-size: 7.39px;
+    border-radius: 25px;
+}
+
+.img-with-text img {
+    display: block;
+    margin: 3px auto;
+    border-radius: 25px;
+}
+
+
+
 
 h2 {
   font-size: 2.25em /* 36px */
